# bmstu-iu7-4sem-cg

./: README.md  readme.md
lab_01/: .gitignore  gui.pro  iu7-cg-labs-kostritsky.mk  makefile
lab_01/src/: draw.cpp  draw.hpp  geometry.cpp  geometry.hpp  io.cpp  io.hpp  json.hpp  json_nlohmann.hpp  json_process.cpp  json_process.hpp  main_cli.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  manager.cpp  manager.hpp  messages.cpp  messages.hpp  messages_text.hpp  points.cpp  points.hpp  status.hpp  table.cpp  table.hpp
lab_01/tests/: pos_in.json  pos_out.json
lab_02/: CMakeLists.txt  makefile  readme.md
lab_02/forms/: mainwindow.ui
lab_02/inc/: arc.hpp  bezier_curve.hpp  body_part.hpp  canvas.hpp  circle.hpp  ellipse.hpp  mainwindow.hpp  picture.hpp  polyline.hpp  shape.hpp  status.hpp  student_deepseekov.hpp
lab_02/src/: body_part.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.ui  student_deepseekov.cpp
